# project-patterns-python

./: .gitignore  Makefile  mkdocs.yml  pyproject.toml
project-patterns/creational-patterns/singleton/: logger.py
project_patterns/: __init__.py
project_patterns/behavial_patterns/: __init__.py
project_patterns/behavial_patterns/chain_of_responsibility/: __init__.py  atm_dispenser_chain.py  dispenser.py  dispenser_10.py  dispenser_20.py  dispenser_50.py
project_patterns/behavial_patterns/command/: __init__.py  command.py  fire_attack.py  invoker.py  light_attack.py  receiver.py
project_patterns/behavial_patterns/interpreter/: __init__.py  abstract_expression.py  add.py  number.py  sentence_parser.py  subtract.py
project_patterns/behavial_patterns/iterator/: __init__.py  doubler.py
project_patterns/behavial_patterns/mediator/: __init__.py  component.py  mediator.py
project_patterns/creational_patterns/: __init__.py
project_patterns/structural_patterns/: __init__.py  item_families.py
tests/: __init__.py  test_adapter.py  test_bridge.py  test_composite.py  test_interpreter.py  test_iterator.py  test_proxy.py  test_singleton.py
tests/behavial_patterns/: test_chain_of_responsibility.py  test_command.py  test_mediator.py  test_memento.py  test_observer.py  test_state.py  test_strategy.py  test_template.py  test_visitor.py
tests/creatinal_patterns/: test_abstract_factory.py  test_builder.py  test_factory.py  test_prototype.py
tests/structural_patterns/: test_decorator.py  test_facade.py  test_flyweight.py
(+81 files in other folders)
