[tool.poetry]
name = "project-patterns"
version = "0.1.0"
description = "A project to learn project patterns using python"
authors = ["kaslufl <leallucasfonseca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
blue = "^0.7.0"
pytest = "^7.0.1"
mkdocs = "^1.2.3"
prospector = "^1.6.0"
pip-audit = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
